<resources>
    <string name="app_name">LoginSample</string>
    <string name="samplez"><u>Forgot Password</u>.</string>
    <string name="samplez2"><u>or Sign In With</u>.</string>
    <string name="samplez3">Dont Have an Account <u> Sign Up</u>.</string>
    <string name="selectBill">Select which biller(s) you want to pay</string>
    <string name="verifyLoginPasswordMessage">Enter your Login Password</string>
    <string name="verifyLoginPasswordTextHint">Enter Password</string>
    <string name="editPersonalDetails">Edit Personal Details</string>
    <string name="epdFirstName">First Name</string>
    <string name="epdLastName">LastName</string>
    <string name="epdDob">Date of birth</string>
    <string name="epdPerAddress">Permanent Address</string>
    <string name="epdEmail">Email Address</string>
    <string name="btnSave">Save</string>
    <string name="btnConfirm">Confirm</string>
    <string name="action_menu">Main menu</string>
    <string name="verifyBillsMessage">Enter the amount to pay for each Biller</string>
    <string name="totalAmount">Total Amount</string>
    <string name="rs">Rs.</string>
    <string name="amount">1000.00</string>
    <string name="amountHint">100.00</string>
    <string name="selectWalletMessage">Select an account to pay</string>
    <string name="confirmBillMessage">Selected Account</string>
    <string name="otpHead">OTP Verification</string>
    <string name="enterOtp">Enter OTP :</string>
    <string name="enterOtpVal">Enter OTP</string>
    <string name="btnCancel">Cancel</string>
    <string name="sampleNumber">0775651247</string>
    <string name="selectWallet">Select a wallet</string>

    <string name="toolbarSettings">Settings</string>
    <string name="toolbarMore">More</string>
    <string name="toolbarHistory">History</string>
    <string name="toolbarLogout">Logout</string>

    <string name="action_settings">Settings</string>
</resources>